@@ -1,6 +1,7 @@
 *** Changelog ***
 
 = 8.5.2 - xxxx-xx-xx =
+* Fix - Fixed errors when using Link to purchase subscription products that could lead to duplicate payment attempts.
 * Fix - Prevent failures creating SetupIntents when using a non-saved payment method on the Legacy checkout experience.
 
 = 8.5.1 - 2024-07-12 =
